--- a/macros.tex
+++ b/macros.tex
@@ -2,6 +2,8 @@
 \newcommand{\maketiny}[1]{{\tiny G: #1}} % ignore blocks of text
 \newcommand{\ganesh}[1]{\todo[inline,size=\small, color=purple!40]{G: #1}}
 
+\newcommand{\goat}{\textsc{GoAT}\xspace}
+
 \newcommand{\etc}{etc.\@\xspace}
 \newcommand{\ie}{i.e.\@\xspace}
 \newcommand{\eg}{e.g.\@\xspace}
@@ -15,8 +17,8 @@
 \newcommand\ggcmt[1]{\todo[inline, size=\small, color=green!40]{GG: #1}}
 \newcommand\ggcmtside[1]{\todo[size=\scriptsize, color=green!40]{GG: #1}}
 
-\newcommand\stcmt[1]{\todo[inline, size=\small, color=orange!60]{ST: #1}}
-\newcommand\stcmtside[1]{\todo[size=\scriptsize, color=orange!40]{ST: #1}}
+\newcommand\stcmt[1]{\todo[inline, size=\small, color=orange!60]{#1}}
+\newcommand\stcmtside[1]{\todo[size=\scriptsize, color=orange!40]{#1}}
 
 %--\newcommand{\circleRtool}{circleRtool\circledR\xspace}
 
