--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -1,6 +1,7 @@
 \documentclass{svproc}
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
 %\usepackage[table]{xcolor}
+\usepackage[table,xcdraw]{xcolor}
 \usepackage{paralist} % compactitem etc
 \usepackage{booktabs} % For formal tables
 \usepackage{numprint}
@@ -74,8 +75,8 @@ Craig Chambers, Kim B. Bruce, and Elisa Bertino}
 \label{sec:design}
 \input{design.tex}
 
-\section{Benchmark}
-\label{sec:bench}
+\section{Evaluation}
+\label{sec:evaluation}
 \input{bench.tex}
 
 
