compatible for IEEE Cluster - compiled well

--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -1,6 +1,11 @@
-\documentclass{svproc}
+\documentclass[conference]{IEEEtran}
+\IEEEoverridecommandlockouts
 % The preceding line is only needed to identify funding in the first footnote. If that is unneeded, please comment it out.
-%\usepackage[table]{xcolor}
+%\usepackage{cite}
+\usepackage{amsmath,amssymb,amsfonts}
+\usepackage{algorithmic}
+\usepackage{graphicx}
+\usepackage{textcomp}
 \usepackage[table,xcdraw]{xcolor}
 \usepackage{paralist} % compactitem etc
 \usepackage{booktabs} % For formal tables
@@ -8,8 +13,6 @@
 \usepackage{xspace}
 %\usepackage{cite}
 \usepackage{amsmath,amssymb,amsfonts}
-\usepackage{algorithmic}
-\usepackage{graphicx}
 \usepackage{color}
 \usepackage{textcomp}
 \usepackage[normalem]{ulem}
@@ -32,35 +35,38 @@
 \usepackage[colorinlistoftodos]{todonotes}
 \input{macros.tex}
 
+
+\def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
+    T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
 \begin{document}
-\mainmatter              % start of a contribution
-%
-\title{GOAT}
-%
-\titlerunning{Go analysis and testing}
-%
-\author{Saeed Taheri \and Ganesh Gopalakrishnan}
-%
-\authorrunning{S. Taheri \and G. Gopalakrishnan} % abbreviated author list (for running head)
-%
-%%%% list of authors for the TOC (use if author list has to be modified)
-\tocauthor{Ivar Ekeland, Roger Temam, Jeffrey Dean, David Grove,
-Craig Chambers, Kim B. Bruce, and Elisa Bertino}
-%
-\institute{University of Utah, Salt Lake City UT 84112, USA,\\
-\email{\{staheri,ganesh\}@cs.utah.edu},
+
+
+\title{GOAT
+\thanks{NSF funding?}
 }
 
-\maketitle              % typeset the title of the contribution
+\author{\IEEEauthorblockN{Saeed Taheri}
+\IEEEauthorblockA{\textit{School of Computing} \\
+\textit{University of Utah}\\
+Salt Lake City, U.S.A. \\
+staheri@cs.utah.edu}
+\and
+\IEEEauthorblockN{Ganesh Gopalakrishnan}
+\IEEEauthorblockA{\textit{School of Computing} \\
+\textit{University of Utah}\\
+Salt Lake City, U.S.A. \\
+ganesh@cs.utah.edu}
+}
 
-
+\maketitle
 
 \begin{abstract}
-\label{abs}
-\input{abstract.tex}
-\keywords{golang,concurrency,testing,debugging}
+\input{abstract}
 \end{abstract}
 
+\begin{IEEEkeywords}
+golang, concurrency, testing coverage analysis
+\end{IEEEkeywords}
 
 \section{Introduction}
 \label{sec:intro}
@@ -87,7 +93,7 @@ Craig Chambers, Kim B. Bruce, and Elisa Bertino}
 
 
 
-\bibliographystyle{splncs04}
+\bibliographystyle{IEEEtran}
 \bibliography{bibs}
 
 
