added coverage tex

--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -85,7 +85,9 @@ golang, concurrency, testing coverage analysis
 \label{sec:evaluation}
 \input{bench.tex}
 
-
+\section{Coverage}
+\label{sec:coverage}
+%\input{coverage.tex}
 
 \section{Related Work}
 \label{sec:related}
