--- a/design.tex
+++ b/design.tex
@@ -11,7 +11,7 @@
 }
 \begin{figure}
 \centering
-  \includegraphics[width=.95\linewidth]{figs/overview-hand.jpg}
+  \includegraphics[width=.95\linewidth]{figs/overview.pdf}
   \caption{Framework Overview}
   \label{fig:overview}
 \end{figure}
@@ -82,5 +82,5 @@ Deadlock detector: After the program terminates, goat queries the database to di
   %
   A one-line query to the application database retrieves the final event of each executed goroutine.
   %
-    
+
 \end{itemize}
