--- a/paper-goat.tex
+++ b/paper-goat.tex
@@ -81,17 +81,18 @@ golang, concurrency, testing coverage analysis
 \label{sec:design}
 \input{design.tex}
 
-\section{Evaluation}
-\label{sec:evaluation}
+\section{Benchmark}
+\label{sec:bench}
 \input{bench.tex}
 
 \section{Coverage}
 \label{sec:coverage}
-%\input{coverage.tex}
+\input{coverage.tex}
 
 \section{Related Work}
 \label{sec:related}
 \input{relatedwork.tex}
+
 
 
 
