--- a/coverage.tex
+++ b/coverage.tex
@@ -1,3 +1,11 @@
+
+\begin{figure}
+\centering
+  \includegraphics[width=.95\linewidth]{figs/coverage_motivation_tentative.pdf}
+  \caption{focusing on rare bugs}
+  \label{fig:rare_bugs}
+\end{figure}
+
 \begin{itemize}
   \item Background on Coverage
   \item Limitations of current concurrency coverage criterias
