--- a/macros.tex
+++ b/macros.tex
@@ -2,6 +2,8 @@
 \newcommand{\maketiny}[1]{{\tiny G: #1}} % ignore blocks of text
 \newcommand{\ganesh}[1]{\todo[inline,size=\small, color=purple!40]{G: #1}}
 
+
+
 \newcommand{\goat}{\textsc{GoAT}\xspace}
 
 \newcommand{\etc}{etc.\@\xspace}
@@ -31,6 +33,8 @@
 
 \renewcommand{\algorithmcfname}{Procedure}
 
+
+\newtheorem{definition}{Definition}[section]
 
 \makeatletter
 \def\BState{\State\hskip-\ALG@thistlm}
